# supabase-py-async

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  client.py  poetry_scripts.py  pyproject.toml
.github/workflows/: ci.yml
lib/: auth_client.py  storage_client.py
supabase_py_async/: __init__.py  __version__.py  client_async.py  client_async_test_v.py  types.py
supabase_py_async/lib/: __init__.py  auth_client.py  client_options.py  realtime_client.py
tests/: .env  aynic_test.py  base_client.py  conftest.py  test_async_client.py  test_auth_client.py  test_client.py  test_client_options.py  test_function_configuration.py  test_postgrest_client.py
