[tool.poetry]
name = "supabase-py-async"
version = "2.5.6"
description = "supabase-py with async synax"
authors = ["Atticuszz <1831768457@qq.com>"]
homepage ="https://github.com/Atticuszz/supabase-py_async"
repository="https://github.com/Atticuszz/supabase-py_async"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
deprecation = "^2.1.0"
gotrue = ">=1.2,<3.0"
postgrest = ">=0.13,<0.17"
storage3 = ">=0.6.1,<0.8.0"
supafunc = "0.4.5"
aiohttp = "^3.9.0"
commitizen = "^3.13.0"
realtime = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest = ">=7.4.3,<9.0.0"
pytest-asyncio = ">=0.21.1,<0.24.0"
faker = ">=22,<25"
isort = "^5.13.2"
autoflake = "^2.2.1"
pyupgrade = "^3.15.0"
black = ">=23.12.1,<25.0.0"
python-semantic-release = ">=8.7,<10.0"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"



[tool.poetry.scripts]
tests = 'poetry_scripts:run_tests'

[tool.semantic_release]
version_variable = ["supabase_py_async/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
upload_to_vcs_release = true
commit_message = "chore(release): bump version to v{version}"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
